syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service CompanyProfile{
	rpc ReadCompanyProfile (CompanyProfileIdRequest) returns (CompanyProfilePayload);
	rpc GetAllCompanyProfile (google.protobuf.Empty) returns (AllCompanyProfilePayload);
	rpc CreateCompanyProfile (CompanyProfilePayload) returns (google.protobuf.Empty);
	rpc UpdateCompanyProfile (CompanyProfilePayload) returns (google.protobuf.Empty);
	rpc DeleteCompanyProfile (CompanyProfilePayload) returns (google.protobuf.Empty);
}

message CompanyProfileIdRequest{
	string Id =1;
}

message CompanyProfilePayload {
	string Id = 1;
	google.protobuf.Timestamp RegistrationDate = 2;
	string CompanyWebsite = 3;
	string ContactPhone = 4;
	string ContactName = 5;
	bytes CompanyLogo = 6;
}

message AllCompanyProfilePayload {
	repeated CompanyProfilePayload CompanyProfiles = 1;
}